--- a/leafy_oasis/package.json
+++ b/leafy_oasis/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "homepage": "https://sharjil-ali37.github.io/Leafy-Oasis-FullStack-NodeJS",
   "dependencies": {
+    "@kommunicate/kommunicate-chatbot-plugin": "^0.0.6",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
@@ -12,7 +13,8 @@
     "react": "^18.2.0",
     "react-bootstrap": "^2.7.2",
     "react-dom": "^18.2.0",
-    "react-scripts": "5.0.1",
+    "react-scripts": "^5.0.1",
+    "react-simple-chatbot": "^0.6.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
