--- a/leafy_oasis/package.json
+++ b/leafy_oasis/package.json
@@ -4,6 +4,9 @@
   "private": true,
   "homepage": "https://sharjil-ali37.github.io/Leafy-Oasis-FullStack-NodeJS",
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^6.4.0",
+    "@fortawesome/free-solid-svg-icons": "^6.4.0",
+    "@fortawesome/react-fontawesome": "^0.2.0",
     "@kommunicate/kommunicate-chatbot-plugin": "^0.0.6",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
