--- a/leafy_oasis/package.json
+++ b/leafy_oasis/package.json
@@ -13,6 +13,7 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.3.5",
     "bootstrap": "^5.2.3",
+    "firebase": "^9.19.1",
     "install": "^0.13.0",
     "react": "^18.2.0",
     "react-bootstrap": "^2.7.2",
