--- a/leafy_oasis/package.json
+++ b/leafy_oasis/package.json
@@ -20,6 +20,9 @@
     "react-chatbot-kit": "^2.1.2",
     "react-dom": "^18.2.0",
     "react-scripts": "^5.0.1",
+    "react-slick": "^0.29.0",
+    "slick-carousel": "^1.8.1",
+    "swiper": "^9.2.4",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
@@ -49,7 +52,9 @@
     ]
   },
   "devDependencies": {
+    "css-loader": "^6.7.3",
     "gh-pages": "^5.0.0",
     "react-router-dom": "^6.10.0"
   }
+  
 }
