--- a/leafy_oasis/package.json
+++ b/leafy_oasis/package.json
@@ -23,6 +23,7 @@
     "react-slick": "^0.29.0",
     "slick-carousel": "^1.8.1",
     "swiper": "^9.2.4",
+    "validator": "^13.9.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
